# PIAIC-QUARTER-3

./: PIAIC-AIoT-Q3-Syllabus.docx  README.md
Iot_classes/class-04/: Cargo.toml
Iot_classes/class-04/src/: main.rs
Iot_classes/class-05/: Cargo.toml
Iot_classes/class-05/src/: file.rs  main.rs  t2.txt
Iot_classes/class-06/: Cargo.toml
Iot_classes/class-06/src/: main.rs
Iot_classes/class-07/: Cargo.toml
Iot_classes/class-07/src/: main.rs
class03/: Cargo.toml
class03/src/: main.rs
class5/: Cargo.toml
class5/src/: main.rs
